--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc": "rm -rf build && tsc",
-    "ts": "rm -rf build && tsc -w",
+    "tsc": "rmdir /Q /S build && tsc",
+    "ts": "rmdir /Q /S build && tsc -w",
     "dev": "nodemon ./build/dataType.js"
   },
   "keywords": [],
